--- a/views/_booking_planning.erb
+++ b/views/_booking_planning.erb
@@ -1,11 +1,16 @@
 <style type="text/css">
-  #parent {
+  #parent, #operation_area {
 	height: 430px;
   }
 			
   #planning_table {
-  	font-size: 0.8em;
-	width: 1800px !important;
+  	font-size: 0.75em;
+	  width: 1800px !important;
+  }
+
+  #planning_table .data.filled {
+    cursor: hand;
+    cursor: pointer;
   }
 
   #planning_table tr:first th {
@@ -14,12 +19,13 @@
 
   #planning_table th {
     background: #EEE;
-    padding: 5px;
+    padding: 5px 2px;
+    font-size: 0.90em;
   } 
 
   #planning_table td {
   	border: 1px solid #DDD;
-  	padding: 5px;
+  	padding: 5px 2px;
   }
 
   #planning_table .data {
@@ -27,11 +33,37 @@
   }
 
 </style>
-<div id="parent" style="overflow: auto">
-    <table id="planning_table">
-      <thead>
-      </thead>
-      <tbody>
-      </tbody>
-    </table>
+<div class="container_12">
+  <div class="grid_9">
+    <div id="parent" style="overflow: auto">
+      <table id="planning_table">
+        <thead>
+        </thead>
+        <tbody>
+        </tbody>
+      </table>
+    </div>
+  </div>
+  <div class="grid_3">
+    <div id="operation_area" class="left-margin smaller_text">
+    </div>
+  </div>
 </div>
+<div class="container_12">
+  <div class="grid_6">
+    <div class="guiblock smaller_text">
+      <h3 style="font-size: 1.2em">Filtros</h3>
+    </div>
+  </div>
+  <div class="grid_6">
+    <div class="guiblock smaller_text left-margin">
+      <p>Para reasignar el recurso de una reservar, haga click sobre una celda del planning para seleccionar la reserva y a continuación vuelva a hacer click sobre la casilla
+      correspondiente al nuevo recurso a asignar</p>
+    </div>
+  </div>
+</div>
+
+<script type="text/template">
+   
+</script>
+
