--- a/views/bookings_management.js.erb
+++ b/views/bookings_management.js.erb
@@ -156,12 +156,42 @@ require(['jquery', 'YSDEntityManagement','YSDRemoteDataSource', 'YSDSelectSelect
       $('.resource_user_surname').bind('blur', function() {
         self.updateLineResource($(this)[0]);
       });
+      $('.resource_user_document_id').bind('blur', function() {
+        self.updateLineResource($(this)[0]);
+      });   
+      $('.resource_user_phone').bind('blur', function() {
+        self.updateLineResource($(this)[0]);
+      });          
+      $('.resource_user_email').bind('blur', function() {
+        self.updateLineResource($(this)[0]);
+      });       
       $('.customer_height').bind('change', function() {
         self.updateLineResource($(this)[0]);
       });
       $('.customer_weight').bind('change', function() {
         self.updateLineResource($(this)[0]);
       });
+      $('.resource_user_2_name').bind('blur', function() {
+        self.updateLineResource($(this)[0]);
+      });
+      $('.resource_user_2_surname').bind('blur', function() {
+        self.updateLineResource($(this)[0]);
+      });
+      $('.resource_user_2_document_id').bind('blur', function() {
+        self.updateLineResource($(this)[0]);
+      });   
+      $('.resource_user_2_phone').bind('blur', function() {
+        self.updateLineResource($(this)[0]);
+      });          
+      $('.resource_user_2_email').bind('blur', function() {
+        self.updateLineResource($(this)[0]);
+      });       
+      $('.customer_2_height').bind('change', function() {
+        self.updateLineResource($(this)[0]);
+      });
+      $('.customer_2_weight').bind('change', function() {
+        self.updateLineResource($(this)[0]);
+      });      
       $('.booking_item_reference').bind('change', function() {
         self.updateLineResource($(this)[0]);
       });
