--- a/views/reserva-online.erb
+++ b/views/reserva-online.erb
@@ -69,34 +69,27 @@
         <div id="extras-selection" class="bottom-margin all-border-solid-light rounded" style="display:none">
       	  <form>
       	  	<div class="container_12">
+              <div class="grid_12">
+                <fieldset id="fs_summary_extras">
+                  <legend id="lg_summary_extras" class="legend-first-level"><%=t.new_booking.extras%></legend>          
+                  <table id="tblextras">
+                    <tbody>
+                    </tbody>
+                  </table>
+                </fieldset>
+              </div>
+            </div>                 
             <% if booking_item_family.named_resources or booking_item_family.weight or
                   booking_item_family.height %>	          
-            <div class="grid_4">
-	            <fieldset id="fs_summary_extras">
-	              <legend id="lg_summary_extras" class="legend-first-level"><%=t.new_booking.extras%></legend>	        
-	              <table id="tblextras">
-	                <tbody>
-	                </tbody>
-	              </table>
-	            </fieldset>
-	          </div>
-	          <div class="grid_8">
-	            <fieldset id="fs_resources_attributes">
-	              <legend id="lg_summary_extras" class="legend-first-level">Recursos</legend>		 
-	              <div id="resources_attributes">
-	              </div>
-	            </fieldset>
-	          </div>
-            <% else %>
-            <div class="grid_12">
-              <fieldset id="fs_summary_extras">
-                <legend id="lg_summary_extras" class="legend-first-level"><%=t.new_booking.extras%></legend>          
-                <table id="tblextras">
-                  <tbody>
-                  </tbody>
-                </table>
-              </fieldset>
-            </div>            
+	          <div class="container_12">
+              <div class="grid_12">
+	              <fieldset id="fs_resources_attributes">
+	                <legend id="lg_summary_extras" class="legend-first-level">Recursos</legend>	
+                  <div id="resources_attributes" class="smaller_text">
+	                </div>
+	              </fieldset>
+	            </div>
+            </div>
             <% end %>
 	        </div>
 	        <div class="top-margin-1line top-space-1line top-border-nosolid">
@@ -275,8 +268,13 @@
      <table class="table smaller_text">
        <thead class="table-header">
          <tr>
+           <% if booking_item_family.named_resources %>
            <th class="table-header-title">Recurso</th>
-           <th class="table-header-title">Usuario</th>           
+           <th class="table-header-title" style="width: 250px">Nombre y apellidos</th>
+           <th class="table-header-title">DNI / Pasaporte</th>
+           <th class="table-header-title">Teléfono</th>
+           <th class="table-header-title">Email</th>           
+           <% end %>
            <% if booking_item_family.height %>
            <th class="table-header-title">Altura</th>
            <% end %>
@@ -290,10 +288,21 @@
              <%% for (var idx=0;idx< booking.booking_lines[item].quantity;idx++) { %>
                 <tr class="table-row"> 
                   <td class="table-cell"><%%=booking.booking_lines[item].item_description%> <%%=idx+1%></td>
+                  <% if booking_item_family.named_resources %>
                   <td class="table-cell">
                      <input class="resource_user_name" type="text" maxlength="80" size="15" rel="<%%=item%>" data-idx="<%%=idx%>"/>
                      <input class="resource_user_surname" type="text" maxlength="80" size="15" rel="<%%=item%>" data-idx="<%%=idx%>"/>
                   </td>
+                  <td class="table-cell">
+                     <input class="resource_user_document_id" type="text" maxlength="50" size="15" rel="<%%=item%>" data-idx="<%%=idx%>"/>                  
+                  </td>
+                  <td class="table-cell">
+                     <input class="resource_user_phone" type="text" maxlength="15" size="15" rel="<%%=item%>" data-idx="<%%=idx%>"/>                  
+                  </td>
+                  <td class="table-cell">
+                     <input class="resource_user_email" type="text" maxlength="40" size="15" rel="<%%=item%>" data-idx="<%%=idx%>"/>                  
+                  </td>                  
+                  <% end %>
                   <% if booking_item_family.height %>
                   <td class="table-cell">
                      <select class="height" rel="<%%=item%>" data-idx="<%%=idx%>" >
@@ -314,7 +323,47 @@
                      </select>
                   </td>
                   <% end %>
-                </td>
+                </tr>
+                <%% if (bookingDataSystem.families[item].capacity == 2) { %>
+                <tr class="table-row">
+                  <td class="table-cell"></td>
+                  <% if booking_item_family.named_resources %>
+                  <td class="table-cell">
+                     <input class="resource_user_2_name" type="text" maxlength="80" size="15" rel="<%%=item%>" data-idx="<%%=idx%>"/>
+                     <input class="resource_user_2_surname" type="text" maxlength="80" size="15" rel="<%%=item%>" data-idx="<%%=idx%>"/>
+                  </td>
+                  <td class="table-cell">
+                     <input class="resource_user_2_document_id" type="text" maxlength="50" size="15" rel="<%%=item%>" data-idx="<%%=idx%>"/>                  
+                  </td>
+                  <td class="table-cell">
+                     <input class="resource_user_2_phone" type="text" maxlength="15" size="15" rel="<%%=item%>" data-idx="<%%=idx%>"/>                  
+                  </td>
+                  <td class="table-cell">
+                     <input class="resource_user_2_email" type="text" maxlength="40" size="15" rel="<%%=item%>" data-idx="<%%=idx%>"/>                  
+                  </td>                  
+                  <% end %>
+                  <% if booking_item_family.height %>
+                  <td class="table-cell">
+                     <select class="height_2" rel="<%%=item%>" data-idx="<%%=idx%>" >
+                     <option value=""><%=t.new_booking.height.placeholder%></option>
+                       <% booking_item_family.height_values.split(',').each do |height|%>
+                         <option value="<%=height%>"><%=height%></option>
+                       <% end %>
+                     </select>
+                  </td>
+                  <% end %>
+                  <% if booking_item_family.weight %>
+                  <td class="table-cell">
+                     <select class="weight_2" rel="<%%=item%>" data-idx="<%%=idx%>">
+                     <option value=""><%=t.new_booking.weight.placeholder%></option>
+                       <% booking_item_family.weight_values.split(',').each do |weight|%>
+                         <option value="<%=weight%>"><%=weight%></option>
+                       <% end %>
+                     </select>
+                  </td>
+                  <% end %>
+                </tr>
+                <%% } %>
              <%% } %>
           <%% } %>	
        </tbody>
